--- a/quickstart-learnfast/customer-sentiment-review/.env
+++ b/quickstart-learnfast/customer-sentiment-review/.env
@@ -1,3 +1,3 @@
-OPENAI_API_BASE=https://hyssh-openai.openai.azure.com/
-OPENAI_API_KEY=db0bc2eb195649f2bbebf9e2555e2b32
+OPENAI_API_BASE=https://openaisvcdataaidemos.openai.azure.com/
+OPENAI_API_KEY=65b4fb7cf60d4663943d0c6c8d91b5c9
 OPENAI_API_VERSION=2023-03-15-preview
